# Luminar_AI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.mypy_cache/: missing_stubs
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _curses.data.json  _curses.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _imp.data.json  _imp.meta.json  _io.data.json  _io.meta.json  (+276 more)
.mypy_cache/3.13/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.13/PIL/: Image.data.json  (+47 more)
backend/api/: main.py
backend/evaluation/: benchmark_runner.py  ragas_eval.py
backend/mcp_server/: server.py
backend/rag/: db.py
backend/tests/: test_platform.py
docker/: Dockerfile.backend
docker/prometheus/: prometheus.yml
evals/: benchmark.json
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
k8s/: helm-chart.yaml
mcp_tools/: tools.yaml
(+4812 files in other folders)
