[project]
name = "research-intelligence-platform"
version = "0.1.0"
description = "Enterprise AI Research Intelligence Platform built with Google ADK, A2A, Advanced RAG, and MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sse-starlette>=2.1.0",
    "websockets>=12.0",
    "google-adk>=2.0.0",
    "google-genai>=0.1.0",
    "qdrant-client>=1.9.0",
    "neo4j>=5.20.0",
    "redis>=5.0.4",
    "asyncpg>=0.29.0",
    "sqlalchemy[mypy]>=2.0.30",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.24.5",
    "python-docx>=1.1.2",
    "youtube-transcript-api>=0.6.2",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",
    "slowapi>=0.1.9",
    "mcp>=0.1.0",
    "pydantic>=2.7.3",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "rich>=13.7.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "ruff>=0.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]

[tool.mypy]
ignore_errors = true
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = ["arg-type", "union-attr", "index", "list-item", "return-value", "assignment", "import-not-found", "import-untyped", "annotation-unchecked", "misc", "type-arg"]
follow_imports = "silent"
